[workspace]
members = ["air"]

resolver = "2"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[workspace.dependencies]

# sp1
sp1-core-executor = { version = "4.1.0" } 
sp1-core-machine = { version = "4.1.0" }
sp1-prover = { version = "4.1.0" }
sp1-recursion-core = { version = "4.1.0" }
sp1-cuda = { version = "4.1.0" }
sp1-stark = { version = "4.1.0" }
sp1-eval = { version = "4.1.0" }
sp1-derive = { version = "4.1.0" }

# p3
p3-interpolation = "=0.2.0-succinct"
p3-air = "=0.2.0-succinct"
p3-field = "=0.2.0-succinct"
p3-commit = "=0.2.0-succinct"
p3-matrix = "=0.2.0-succinct"
p3-baby-bear = "=0.2.0-succinct"
p3-util = "=0.2.0-succinct"
p3-challenger = "=0.2.0-succinct"
p3-dft = "=0.2.0-succinct"
p3-fri = "=0.2.0-succinct"
p3-goldilocks = "=0.2.0-succinct"
p3-keccak = "=0.2.0-succinct"
p3-keccak-air = "=0.2.0-succinct"
p3-blake3 = "=0.2.0-succinct"
p3-mds = "=0.2.0-succinct"
p3-merkle-tree = "=0.2.0-succinct"
p3-poseidon2 = "=0.2.0-succinct"
p3-symmetric = "=0.2.0-succinct"
p3-uni-stark = "=0.2.0-succinct"
p3-maybe-rayon = "=0.2.0-succinct"
p3-bn254-fr = "=0.2.0-succinct"
